syntax = "proto3";

package yandex.cloud.loadtesting.v1;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/loadtesting/v1;loadtesting";
option java_package = "yandex.cloud.api.loadtesting.v1";

message Storage {
  string id = 1;
  string folder_id = 2;
  string name = 3;
  string description = 4;
  map<string, string> labels = 5;
  google.protobuf.Timestamp created_at = 6;
  string object_storage_bucket = 7;

  int64 used_size = 8;
}

message StorageObject {
  string object_storage_bucket = 1;
  string object_storage_filename = 2;
}
